# libmapper

./: .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  NEWS  NEWS.markdown  README  README.markdown  autogen.sh  build_darwin_binaries.sh  configure.ac  index.html  libmapper.pc.in  libmpr.pc.in  params.json  whatidid.txt  windows_build.bat  windows_build.ps1
bindings/csharp/: Libmapper.NET.sln  Makefile.am  Mapper.NET.sln  Mapper.cs  README.md  readme.md  test.cs  test_instance.cs  testinstance.cs  testmonitor.cs  testvector.cs  varargs_wrapper.s
bindings/csharp/Demo/: Demo.csproj  Program.cs
bindings/csharp/Libmapper.NET/: Device.cs  Libmapper.NET.csproj  Map.cs  MapperList.cs  Object.cs  Signal.cs  Time.cs  Types.cs
bindings/csharp/Mapper.NET/: Device.cs  Graph.cs  Map.cs  Mapper.NET.csproj  MapperList.cs  MapperObject.cs  Signal.cs  Time.cs  Types.cs
bindings/java/: Makefile.am  mapperjni.c  test.java  testinstance.java  testreverse.java  testspeed.java
bindings/java/TestInstances/: TestInstances.pde
bindings/java/mapper/: AbstractObject.java  Device.java  Map.java  Operator.java  Signal.java  Status.java  Type.java
bindings/python/: Makefile.am  README.md  RELEASING  build_pypi_dist.sh  build_wheels.py  get_version.ps1  libmapper.py  manylinux.sh  pyproject.toml  setup.py  setup.py.in  test.py  testcallbacks.py  testconvergent.py  testgetvalue.py  testinstance.py  testmapfromstr.py  testmonitor.py  testnumpy.py  testrefcount.py  testreverse.py  testvector.py  tkgui.py  windows_build_wheel.ps1
bindings/python/libmapper/: __init__.py  mapper.py.in
doc/: Cross-compiling for Apple Silicon.md  Makefile.am  bela_installation.md  expression_syntax.md  how_to_compile_and_run.md  libmapper.doxyfile.in  libmpr.doxyfile.in  tutorial.md  windows.md  windows.txt  windows_mingw.md
doc/images/: diagrams.md
doc/integration_examples/: mediapipe_integration.md
doc/integration_examples/Blender/: Blender_and_libmapper.md  blender.libmapper.py  simple_example.blend
doc/integration_examples/MediaPipe/: face.py  hands.py  mediapipe_integration.md
doc/tutorial/: tutorial.txt
doc/tutorials/: tutorial_c.md  tutorial_cpp.md  tutorial_csharp.md  tutorial_introduction.md  tutorial_java.md  tutorial_maxmsp.md  tutorial_maxmsp_central.md  tutorial_maxmsp_multiobj.md  tutorial_pure_data.md  tutorial_python.md
doc/understanding_instances/: understanding_instances.md
examples/: Makefile.am  pwm_example.cpp  pyo_example.py  pyo_example_instanced.py  pyside_gui_label_example.py
examples/pwm_synth/: Makefile.am  README.md  RtAudio.cpp  pwm.cpp  pwm.h
examples/py_tk_gui/: Makefile.am  pwm.i  setup.py.in  tk_pwm.py
jni/: Makefile.am  Mapper.java  mapperjni.c  mprjni.c  test.java  testinstance.java  testquery.java  testqueue.java  testreverse.java  testspeed.java
jni/Mapper/: ConnectionListener.java  Db.java  Device.java  InputListener.java  InstanceEventListener.java  LinkListener.java  Map.java  Monitor.java  NativeLib.java.in  Network.java  PropertyValue.java  Signal.java  TimeTag.java  Value.java
jni/Mapper/Db/: Connection.java  ConnectionCollection.java  ConnectionIterator.java  ConnectionListener.java  Device.java  DeviceCollection.java  DeviceIterator.java  DeviceListener.java  Event.java  Link.java  LinkCollection.java  LinkIterator.java  LinkListener.java  Map.java  MapCollection.java  MapIterator.java  MapListener.java  Operator.java  Signal.java  SignalCollection.java  SignalIterator.java  SignalListener.java  SubscriptionType.java
jni/Mapper/device/: Query.java
jni/Mapper/map/: BoundaryAction.java  Query.java
jni/Mapper/signal/: InstanceEvent.java  InstanceEventListener.java  InstanceUpdateListener.java  Query.java
jni/TestInstances/: TestInstances.pde
jni/mapper/: AbstractObject.java  Database.java  Device.java  Direction.java  Graph.java  Link.java  List.java  Map.java  NativeLib.java.in  Property.java  Signal.java  Status.java  Time.java  Type.java  Value.java
jni/mapper/database/: DeviceListener.java  Event.java  LinkListener.java  MapListener.java  ObjectType.java  Operator.java  SignalListener.java  SubscriptionType.java
jni/mpr/: AbstractObject.java  Device.java  Direction.java  Graph.java  List.java  Map.java  NativeLib.java.in  Operator.java  Property.java  Signal.java  Time.java  Type.java
src/: Makefile.am  admin.c  bitflags.h  combiner.c  connection.c  database.c  db.c  device.c  device.h  expression.c  expression.h  expression_buffer.h  expression_constant.h  expression_evaluator.h  expression_function.h  expression_lexer.h  expression_operator.h  expression_parser.h  expression_stack.h  expression_struct.h  expression_token.h  expression_trace.h  expression_value.h  expression_variable.h  graph.c  graph.h  id.h  id_map.h  interpreter.c  libmapper.def  libmpr.def  link.c  link.h  list.c  list.h  map.c  map.h  mapper.c  mapper_internal.h  mapping.c  (+37 more)
src/expression/: expr_buffer.h  expr_constant.h  expr_evaluator.h  expr_function.h  expr_lexer.h  expr_operator.h  expr_parser.h  expr_stack.h  expr_struct.h  expr_token.h  expr_trace.h  expr_value.h  expr_variable.h
src/util/: mpr_debug.h  mpr_inline.h  mpr_set_coerced.c  mpr_set_coerced.h
swig/: Makefile.am  copywhich.sh  mapper.i  mpr.i  setup.py  setup.py.in  test.py  testcallbacks.py  testconvergent.py  testinstance.py  testmapfromstr.py  testquery.py  testqueue.py  testreverse.py  testvector.py  tkgui.py
test/: CMakeLists.txt  Makefile.am  test  test.c  test2.c  test_2.c  test_map_no_src.c  test_map_timed.c  test_subscriptions.c  test_time_sync.c  test_unlinked_unconnected.c  testadmin.c  testbundle.c  testcalibrate.c  testcombiner.c  testconvergent.c  testcpp.cpp  testcustomtransport.c  testdatabase.c  testdb.c  testdynamic.c  testexpression.c  testgraph.c  testinstance.c  testinstance_coord_rel_dnstrm.c  testinstance_coordination.c  testinstance_no_cb.c  testinterrupt.c  testlinear.c  testlist.c  testlocalmap.c  testmany.c  testmapfail.c  testmapinput.c  testmaplocation.c  testmapper.c  testmapprotocol.c  testmapscope.c  testmonitor.c  testmonitor.cpp  (+25 more)
(+89 files in other folders)
